<?xml version="1.0"?>
<package format="2">
  <name>icpslam</name>
  <version>0.0.2</version>
  <description>The icpslam package</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>
  <author email="yoshua@kth.se">Yoshua Nava</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pose_graph_utils</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>
